--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-leaflet": "^4.2.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.26.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
