--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,9 @@
+aioredis==1.3.1
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
 apitally==0.11.0
+async-timeout==4.0.3
 backoff==2.2.1
 bcrypt==4.0.1
 bidict==0.23.1
@@ -21,6 +23,8 @@ ecdsa==0.18.0
 email_validator==2.1.1
 ez_setup==0.9
 fastapi==0.110.0
+fastapi-cache==0.1.0
+fastapi-cache2==0.2.2
 filelock==3.13.1
 firebase-admin==6.5.0
 google-api-core==2.18.0
@@ -37,6 +41,7 @@ greenlet==3.0.3
 grpcio==1.62.1
 grpcio-status==1.62.1
 h11==0.14.0
+hiredis==3.0.0
 httpcore==1.0.5
 httplib2==0.22.0
 httptools==0.6.1
@@ -51,6 +56,7 @@ MarkupSafe==2.1.5
 msgpack==1.0.8
 packaging==24.1
 passlib==1.7.4
+pendulum==3.0.0
 platformdirs==4.2.0
 pluggy==1.5.0
 proto-plus==1.23.0
@@ -68,23 +74,26 @@ pytest==8.3.2
 pytest-asyncio==0.23.8
 pytest-cov==5.0.0
 pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-engineio==4.9.0
 python-jose==3.3.0
 python-multipart==0.0.9
 python-socketio==5.11.1
 PyYAML==6.0.1
+redis==5.0.8
 requests==2.31.0
 rsa==4.9
-setuptools==57.5.0
 simple-websocket==1.0.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.27
 sse-starlette==2.1.2
 starlette==0.36.3
+time-machine==2.15.0
 typing==3.7.4.3
 typing_extensions==4.9.0
+tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
 uuid==1.30
