Update setup docker and nginx

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,23 +1,66 @@
-# Stage 1: Install system dependencies
-FROM python:3.12-slim as base
+# Stage 1: Builder
+FROM python:3.12-slim as builder
 
-# Install PostgreSQL development packages
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
+# Install build dependencies
 RUN apt-get update && \
-    apt-get install -y \
-    build-essential \
-    libpq-dev \
+    apt-get install -y --no-install-recommends \
+        build-essential \
+        libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Set working directory
+# Create a virtual environment
+RUN python -m venv /opt/venv
+
+# Upgrade pip
+RUN /opt/venv/bin/pip install --upgrade pip
+
+# Set work directory
 WORKDIR /app
 
+# Copy only requirements to leverage Docker cache
+COPY requirements.txt .
+
 # Install dependencies
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+RUN /opt/venv/bin/pip install --no-cache-dir -r requirements.txt
+
+# Stage 2: Production
+FROM python:3.12-slim
+
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PATH="/opt/venv/bin:$PATH"
+
+# Install runtime dependencies
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        libpq5 \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create a non-root user
+RUN useradd --create-home appuser
+
+# Set work directory
+WORKDIR /app
+
+# Copy the virtual environment from the builder stage
+COPY --from=builder /opt/venv /opt/venv
 
 # Copy application code
 COPY . .
 
-# Expose port for FastAPI
-EXPOSE 8888
-CMD ["python", "src/main.py"]
+# Change ownership to the non-root user
+RUN chown -R appuser:appuser /app
+
+# Switch to non-root user
+USER appuser
+
+# Expose the port FastAPI will run on
+EXPOSE 8000
+
+# Use Uvicorn as the application server with multiple workers
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--app-dir", "src"]
