--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+  # FastAPI Server Service
   server:
     build:
       context: ./server
@@ -9,28 +10,44 @@ services:
       - ./server:/app
     container_name: server
     environment:
-      - DB_PORT=${DB_PORT}
-      - DB_NAME=${DB_NAME}
-      - DB_USERNAME=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - REDIS_HOST=${REDIS_HOST}
-      - REDIS_PORT=${REDIS_PORT}
-      - SERVER_PORT=${SERVER_PORT}
+      DB_PORT: ${DB_PORT}
+      DB_NAME: ${DB_NAME}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      REDIS_HOST: redis
+      REDIS_PORT: ${REDIS_PORT}
+      SERVER_PORT: ${SERVER_PORT}
     restart: unless-stopped
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
+    expose:
+      - "${SERVER_PORT}"  # Exposes port to other services but not to the host
     depends_on:
       - db
       - redis
     networks:
-      - db-network
-      - redis-network
+      - app-network
     healthcheck:
-      test: wget --quiet --tries=1 --spider http://localhost:${SERVER_PORT} || exit 1
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:${SERVER_PORT}/health"]
       interval: 30s
       timeout: 10s
       retries: 5
 
+  # Nginx Load Balancer
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - server
+    restart: unless-stopped
+    networks:
+      - app-network
+
+  # PostgreSQL Database
   db:
     image: postgres:13-alpine
     container_name: db
@@ -38,15 +55,15 @@ services:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
-    command: alembic upgrade head
     ports:
-      - "${DB_PORT}:${DB_PORT}"
+      - "${DB_PORT}:${DB_PORT}" # PostgreSQL default port
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
     networks:
-      - db-network
+      - app-network
 
+  # Redis Cache
   redis:
     image: redis:5-alpine
     container_name: redis
@@ -54,30 +71,17 @@ services:
       - .docker/data/redis:/data
     restart: unless-stopped
     ports:
-      - "${REDIS_PORT}:${REDIS_PORT}"
+      - "${REDIS_PORT}:${REDIS_PORT}" # Redis default port
     networks:
-      - redis-network
+      - app-network
     healthcheck:
-      test: ["CMD", "redis-cli","ping"]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 30s
       timeout: 10s
       retries: 5
 
-  # nginx:
-  #   image: nginx:alpine
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf
-  #   depends_on:
-  #     - server
-  #     - websocket
-  #   restart: unless-stopped
-
 networks:
-  db-network:
-    driver: bridge
-  redis-network:
+  app-network:
     driver: bridge
 
 volumes:
